--- a/.github/workflows/test-events.yaml
+++ b/.github/workflows/test-events.yaml
@@ -17,7 +17,7 @@ jobs:
           make
           sudo cp tiburoncin /usr/bin/
           cd ..
-          sudo apt-get install -y valgrind libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libsdl2-mixer-dev cmake catch2
+          sudo apt-get install -y valgrind
           ./tests/events/client_to_server/run_tests.sh build/ tests/events/client_to_server/cases/ single-client no-valgrind 60 10
           ./tests/events/client_to_server/compare_outputs.sh tests/events/client_to_server/cases/ tests/events/client_to_server/expected/
           rm -r build
@@ -35,7 +35,7 @@ jobs:
           make
           sudo cp tiburoncin /usr/bin/
           cd ..
-          sudo apt-get install -y valgrind libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libsdl2-mixer-dev cmake catch2
+          sudo apt-get install -y valgrind
           ./tests/events/server_to_client/run_tests.sh tests_bin/ tests/events/server_to_client/cases/ single-client no-valgrind 60 10
           ./tests/events/server_to_client/compare_outputs.sh tests/events/server_to_client/cases/ tests/events/server_to_client/expected/
           rm -r build
