Arreglo provisorio de CMakeLists 	- agrego server without main y client without main para compilar 	- compila pero eso esta mal, leakea codigo de sv a client y viceversa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,19 +31,22 @@ endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LDFLAGS}")
 
-file(GLOB_RECURSE SOURCES_CLIENT "client/*.cpp" "client_*.cpp")
-file(GLOB_RECURSE SOURCES_SERVER "server/*.cpp" "server/game_logic/*.cpp" "server/protocol/*.cpp" "server_*.cpp")
-file(GLOB_RECURSE SOURCES_COMMON "common/*.cpp" "common/protocol/*.cpp" "common/protocol/messages/*.cpp" "common_*.cpp")
+file(GLOB_RECURSE SOURCES_CLIENT "client/*.cpp" "client/**/*.cpp")
+file(GLOB_RECURSE SOURCES_SERVER "server/*.cpp" "sever/**/*.cpp")
+file(GLOB_RECURSE SOURCES_COMMON "common/*.cpp" "common/**/*.cpp")
 file(GLOB_RECURSE SOURCES_GAME_ENGINE "game_engine/*.cpp" "game_engine/**/*.cpp")
 
-file(GLOB_RECURSE HEADERS_CLIENT "client/*.h")
-file(GLOB_RECURSE HEADERS_SERVER "server/*.h")
-file(GLOB_RECURSE HEADERS_COMMON "common/*.h")
+file(GLOB_RECURSE HEADERS_CLIENT "client/*.h" "client/**/*.h")
+file(GLOB_RECURSE HEADERS_SERVER "server/*.h" "server/**/*.h")
+file(GLOB_RECURSE HEADERS_COMMON "common/*.h" "common/**/*.h")
 file(GLOB_RECURSE HEADERS_GAME_ENGINE "game_engine/*.h" "game_engine/**/*.h")
 
+file(GLOB_RECURSE SERVER_WITHOUT_MAIN "server/game_logic/*.cpp" "server/protocol/*.cpp" "server/match.cpp" "server/match.h")
+file(GLOB_RECURSE CLIENT_WITHOUT_MAIN "client/protocol/*.cpp" "client/protocol/*.h")
+
 if (NOT TESTS)
-    add_executable(client ${SOURCES_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE})
-    add_executable(server ${SOURCES_COMMON} ${SOURCES_SERVER} ${HEADERS_SERVER} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE})
+    add_executable(client ${SOURCES_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE} ${SERVER_WITHOUT_MAIN})
+    add_executable(server ${SOURCES_COMMON} ${SOURCES_SERVER} ${HEADERS_SERVER} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE} ${CLIENT_WITHOUT_MAIN})
 
     target_link_libraries(client SDL2main SDL2 SDL2_image SDL2_ttf SDL2_mixer)
     target_link_libraries(server SDL2main SDL2 SDL2_image SDL2_ttf SDL2_mixer)
