creación de handlers de mensajes (corregido mal uso de dependencias de archivos de common que dependian de server o client), hay un handler para cliente, por el momento lo tiene el thread manager, y dos handlers en server, uno en manager y otro en match. agregado mensaje a enviar de servidor a cliente cuando un cliente joinea partida. corregido en mensajes ya existentes al nuevo método de handlers. agregado un dto de joined y su respectivos metodos para enviar y recibirlo. implementado de enviar mensaje cuando hace join o crear partida al cliente, falta probarlo que funcione.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,10 @@ file(GLOB_RECURSE HEADERS_CLIENT "client/*.h")
 file(GLOB_RECURSE HEADERS_SERVER "server/*.h")
 file(GLOB_RECURSE HEADERS_COMMON "common/*.h")
 file(GLOB_RECURSE HEADERS_GAME_ENGINE "game_engine/*.h" "game_engine/**/*.h")
+file(GLOB_RECURSE SERVER_WITHOUT_MAIN "server/game_logic/.cpp" "server/game_logic/characters/.cpp" "server/match.cpp" "server/match.h" "server/game_logic/characters/.h")
 
 if (NOT TESTS)
-    add_executable(client ${SOURCES_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE})
+    add_executable(client ${SOURCES_COMMON} ${SOURCES_CLIENT} ${HEADERS_CLIENT} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE} ${SERVER_WITHOUT_MAIN})
     add_executable(server ${SOURCES_COMMON} ${SOURCES_SERVER} ${HEADERS_SERVER} ${HEADERS_COMMON} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE})
 
     target_link_libraries(client SDL2main SDL2 SDL2_image SDL2_ttf SDL2_mixer)
