Added install of sdl and deleted step

--- a/.github/workflows/test-events.yaml
+++ b/.github/workflows/test-events.yaml
@@ -6,14 +6,7 @@ jobs:
   test-events:
     runs-on: ubuntu-latest
     steps:
-      - uses: libsdl-org/setup-sdl@main
-        id: sdl
-        with:
-          install-linux-dependencies: true
-          version: 2-latest
-          version-sdl-ttf: 2-latest
-          version-sdl-image: 2-latest
-          version-sdl-mixer: 2-latest
       - uses: actions/checkout@v2
       - run: |
+          sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libsdl2-mixer-dev
           ./build.sh events
