--- a/.github/workflows/test-graphics.yaml
+++ b/.github/workflows/test-graphics.yaml
@@ -7,13 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: libsdl-org/setup-sdl@main
-        id: sdl
-        with:
-          install-linux-dependencies: true
-          version: 2-latest
-          version-sdl-ttf: 2-latest
-          version-sdl-image: 2-latest
-          version-sdl-mixer: 2-latest
       - run: |
+          sudo apt install -y libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev libsdl2-mixer-dev
           ./build.sh graphics
