Agrego x_start en AnimatedSprite 	- sin este no se puede accurately encontrar el proximo frame 	- ahora calcula el nuevo x como x_start + (curr_frame * width)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ add_definitions(-DDATA_PATH="${PROJECT_SOURCE_DIR}/data")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic -pedantic-errors -O0 -ggdb -DDEBUG -fno-inline -std=${CXXSTD} -D _POSIX_C_SOURCE=200809L")
 
-find_package(SDL2 REQUIRED)
-find_package(SDL2_ttf REQUIRED)
-find_package(SDL2_image REQUIRED)
-find_package(SDL2_mixer REQUIRED)
+#find_package(SDL2 REQUIRED)
+#find_package(SDL2_ttf REQUIRED)
+#find_package(SDL2_image REQUIRED)
+#find_package(SDL2_mixer REQUIRED)
 
 option(math "Use math.h" ON)
 option(threads "Use threads" ON)
@@ -72,17 +72,17 @@ if (PRODUCTION)
 
     target_link_libraries(client 
         SDL2main 
-        SDL2::SDL2 
-        SDL2_image::SDL2_image 
-        SDL2_ttf::SDL2_ttf 
+        SDL2 
+        SDL2_image 
+        SDL2_ttf 
         SDL2_mixer
     )
     target_link_libraries(server 
         SDL2main 
-        SDL2::SDL2 
-        SDL2_image::SDL2_image 
-        SDL2_ttf::SDL2_ttf 
-        SDL2_mixer::SDL2_mixer
+        SDL2 
+        SDL2_image 
+        SDL2_ttf 
+        SDL2_mixer
     )
 endif()
 
