--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ add_definitions(-DDATA_PATH="${PROJECT_SOURCE_DIR}/data")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic -pedantic-errors -O0 -ggdb -DDEBUG -fno-inline -std=${CXXSTD} -D _POSIX_C_SOURCE=200809L")
 
-find_package(SDL2 REQUIRED)
-find_package(SDL2_ttf REQUIRED)
-find_package(SDL2_image REQUIRED)
-find_package(SDL2_mixer REQUIRED)
+#find_package(SDL2 REQUIRED)
+#find_package(SDL2_ttf REQUIRED)
+#find_package(SDL2_image REQUIRED)
+#find_package(SDL2_mixer REQUIRED)
 
 option(math "Use math.h" ON)
 option(threads "Use threads" ON)
@@ -73,17 +73,19 @@ if (PRODUCTION)
 
     target_link_libraries(client 
         SDL2main 
-        SDL2::SDL2 
-        SDL2_image::SDL2_image 
-        SDL2_ttf::SDL2_ttf 
+        SDL2 
+        SDL2_image 
+        SDL2_ttf 
         SDL2_mixer
+        yaml-cpp
     )
     target_link_libraries(server 
         SDL2main 
-        SDL2::SDL2 
-        SDL2_image::SDL2_image 
-        SDL2_ttf::SDL2_ttf 
-        SDL2_mixer::SDL2_mixer
+        SDL2 
+        SDL2_image 
+        SDL2_ttf 
+        SDL2_mixer
+        yaml-cpp
     )
 endif()
 
@@ -144,10 +146,12 @@ if (GRAPHICS)
         add_executable(${target_name} ${file} ${SOURCES_GAME_ENGINE} ${HEADERS_GAME_ENGINE})
         target_link_libraries(${target_name} 
             SDL2main 
-            SDL2::SDL2
-            SDL2_image::SDL2_image 
-            SDL2_ttf::SDL2_ttf 
-            SDL2_mixer::SDL2_mixer)
+            SDL2
+            SDL2_image 
+            SDL2_ttf 
+            SDL2_mixer
+            yaml-cpp
+            )
     endforeach()
 endif()
 
@@ -170,12 +174,13 @@ if(PHYSICS)
         ${HEADERS_CLIENT}
     )
     target_link_libraries(tests PRIVATE 
-        Catch2::Catch2WithMain
+        Catch2WithMain
         SDL2main 
-        SDL2::SDL2
-        SDL2_image::SDL2_image 
-        SDL2_ttf::SDL2_ttf 
-        SDL2_mixer::SDL2_mixer
+        SDL2
+        SDL2_image 
+        SDL2_ttf 
+        SDL2_mixer
+        yaml-cpp
     )
 endif()
 
