--- a/assets/maps/map_1.yaml
+++ b/assets/maps/map_1.yaml
@@ -1,5 +1,6 @@
 objects:
     - name: "background_1"
+      colision: false
       s_rect:
           x: 0
           y: 768
@@ -7,12 +8,15 @@ objects:
           h: 158
       d_rect_list:
           - d_rect:
+                repeat_h: 1
+                repeat_v: 1
                 x: 0
                 y: 0
                 w: 800
                 h: 600
 
     - name: "wooden_block_1"
+      colision: true
       s_rect:
           x: 256
           y: 0
@@ -20,17 +24,16 @@ objects:
           h: 32
       d_rect_list:
           - d_rect:
+                repeat_h: 40
+                repeat_v: 19
                 x: 0
                 y: 568
                 w: 32
                 h: 32
           - d_rect:
-                x: 32
-                y: 568
-                w: 32
-                h: 32
-          - d_rect:
-                x: 64
+                repeat_h: 1
+                repeat_v: 19
+                x: 1248
                 y: 568
                 w: 32
                 h: 32
