--- a/assets/maps/map_1.yaml
+++ b/assets/maps/map_1.yaml
@@ -1,6 +1,6 @@
 objects:
     - name: "background_1"
-      colision: false
+      collision: false
       s_rect:
           x: 0
           y: 768
@@ -16,7 +16,7 @@ objects:
                 h: 600
 
     - name: "wooden_block_1"
-      colision: true
+      collision: true
       s_rect:
           x: 256
           y: 0
