Agrego spawnpoints al map_1

--- a/assets/maps/map_1.yaml
+++ b/assets/maps/map_1.yaml
@@ -37,3 +37,10 @@ objects:
                 y: 568
                 w: 32
                 h: 32
+spawnpoints:
+    - x: 100
+      y: 100
+    - x: 600
+      y: 100
+    - x: 1100
+      y: 100
