Cambio CMakeList para q compile 	- agrego cosas en Server without main y client without main -> esta mal SACAR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,10 +47,9 @@ file(GLOB_RECURSE HEADERS_CLIENT "client/*.h" "client/**/*.h")
 file(GLOB_RECURSE HEADERS_SERVER "server/*.h" "server/**/*.h")
 file(GLOB_RECURSE HEADERS_COMMON "common/*.h" "common/**/*.h")
 file(GLOB_RECURSE HEADERS_GAME_ENGINE "game_engine/*.h" "game_engine/**/*.h")
-file(GLOB_RECURSE SERVER_WITHOUT_MAIN "server/game_logic/.cpp" "server/game_logic/characters/.cpp" "server/match.cpp" "server/match.h" "server/game_logic/characters/.h")
 
-file(GLOB_RECURSE SERVER_WITHOUT_MAIN "server/game_logic/*.cpp" "server/protocol/*.cpp" "server/match.cpp" "server/match.h")
-file(GLOB_RECURSE CLIENT_WITHOUT_MAIN "client/protocol/*.cpp" "client/protocol/*.h")
+file(GLOB_RECURSE SERVER_WITHOUT_MAIN "server.cpp" "server.h" "server/protocol/*.cpp" "server/protocol/*.h" "server/game_logic/*.cpp" "server/game_logic/*.h" "server/protocol/**/*.cpp" "server/protocol/**/*.h" "server/game_logic/**/*.cpp" "server/game_logic/**/*.h")
+file(GLOB_RECURSE CLIENT_WITHOUT_MAIN "client.cpp" "client.h" "event_loop.cpp" "event_loop.h" "assets.h" "client/protocol/*.cpp" "client/protocol/*.h" "client/protocol/**/*.cpp" "client/protocol/**/*.h" "client/game_objects/*.cpp" "client/game_objects/*.h" "client/game_objects/**/*.cpp" "client/game_objects/**/*.h" "client/menu_objects/*.cpp" "client/menu_objects/*.h" "client/menu_objects/**/*.cpp" "client/menu_objects/**/*.h" "client/scenes/*.cpp" "client/scenes/*.h" "client/scenes/**/*.cpp" "client/scenes/**/*.h")
 
 if (PRODUCTION)
     add_executable(client 
