Agrego items spawnpoints al map_1 yaml

--- a/assets/maps/map_1.yaml
+++ b/assets/maps/map_1.yaml
@@ -51,3 +51,8 @@ enemy_spawnpoints:
       y: 100
     - x: 300
       y: 100
+item_spawnpoints:
+    - x: 700
+      y: 100
+    - x: 900
+      y: 100
