Borro map_1 y agrego 2 nuevos mapas 	- grass_map 	- electric_map

--- a/assets/maps/grass_map.yaml
+++ b/assets/maps/grass_map.yaml
@@ -5,9 +5,9 @@ objects:
       collision: false
       s_rect:
           x: 0
-          y: 768
+          y: 1154
           w: 255
-          h: 158
+          h: 255
       d_rect_list:
           - d_rect:
                 repeat_h: 1
@@ -16,26 +16,40 @@ objects:
                 y: 0
                 w: 800
                 h: 600
-
-    - name: "wooden_block_1"
+    - name: "wooden_pole"
       collision: true
       s_rect:
-          x: 256
+          x: 37
+          y: 1920
+          w: 22
+          h: 192
+      d_rect_list:
+          - d_rect:
+                repeat_h: 1
+                repeat_v: 1
+                x: 0
+                y: 400
+                w: 22
+                h: 192
+          - d_rect:
+                repeat_h: 1
+                repeat_v: 1
+                x: 1248
+                y: 400
+                w: 22
+                h: 192
+    - name: "grass_block_1"
+      collision: true
+      s_rect:
+          x: 96
           y: 0
           w: 32
           h: 32
       d_rect_list:
           - d_rect:
                 repeat_h: 40
-                repeat_v: 19
+                repeat_v: 1
                 x: 0
-                y: 568
-                w: 32
-                h: 32
-          - d_rect:
-                repeat_h: 1
-                repeat_v: 19
-                x: 1248
                 y: 568
                 w: 32
                 h: 32
